images details update, scrollbar fix + html & css code organisation

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/* general */
-::-webkit-scrollbar {
-    width: 0;
-    background: transparent; 
-}
 html {
 }
 body {
@@ -11,15 +6,7 @@ body {
 }
 
 /* navbar */
-@keyframes pulse {
-    from { transform: scale(1); }
-    50% { transform: scale(0.75); }
-    to { transform: scale(1); }
-}
-
 .navbar {
-    /*background-color: #faebd7;*/
-    /*background-color: #cbcbcb;*/
     position: sticky;
     height: 2rem;
     top: 0;
@@ -43,7 +30,7 @@ body {
     justify-content: flex-end;
 }
 #navbar1 {
-    background-color: #4d696d;
+    background-color: #536366;
 }
 #navbar2 {
     background-color: #524733;
@@ -71,19 +58,10 @@ body {
 }
 #popups {
     color: #000;
-    background-color: #fff;
+    background-color: #afafaf;
     border: none;
     border-radius: 30px;
 }
-/*#hint {*/
-/*    visibility: hidden;*/
-/*    cursor: pointer;*/
-/*    animation-name: pulse;*/
-/*    animation-duration: 3s;*/
-/*    animation-iteration-count: infinite;*/
-/*    -webkit-filter: drop-shadow(0 0 10px #ff9500);*/
-/*    filter: drop-shadow(0 0 10px #ff9500);*/
-/*}*/
 
 /*background images*/
 .backgroundImage {
@@ -94,9 +72,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /*backdrop-filter: blur(4px);*/
     pointer-events: none;
-
 }
 .backgroundImage2 {
     background-image: url("img/room.png");
@@ -104,43 +80,24 @@ body {
 .backgroundImage3 {
     background-image: url("img/meeting.png");
 }
+
 /* scenarios */
 #scenarioMain {
-    /*height: fit-content;*/
     height: 100vh;
     /*height: calc(100vh - 4rem);*/
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
-    /*background-image: linear-gradient(250deg, #ffddac 50%, rgba(161, 157, 151, 0.5) 50%);*/
-    /*background-image: linear-gradient(to bottom, #989898, transparent, #b4b4b4);*/
-    /*background-image: url("img/class.png");*/
-    /*filter: blur(8px);*/
-    /*background-color: rgb(0,0,0); !* Fallback color *!*/
-    /*background-color: rgba(0,0,0, 0.4);*/
     backdrop-filter: blur(3px);
     background-color: #00000045;
-}
-
-.section {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
 }
 
 .block, .backgroundBlock {
     height: calc((100vh - 4rem) / 3);
     scroll-snap-align: start;
     scroll-snap-stop: always;
-    /*width: 75%;*/
     display: flex;
     padding: 0 5px;
     align-items: center;
-    /*opacity: 0;*/
-    /*transition: all 1s ease-in-out;*/
-    /*transform: translateX(-100%);*/
-    /*animation: fade-in-right 1s ease-in-out forwards;*/
-    /*left: -100%;*/
 }
 .blockRight {
     margin-left: auto;
@@ -272,21 +229,12 @@ body {
 /*first page onload - appearance*/
 .block:nth-child(1) {
     opacity: 1;
-    /*background-image: linear-gradient(to bottom, #d0d0d0, #a4a4a4);*/
 }
 .block:nth-child(1) .charTxt {
     box-shadow: 0 0 15px 5px #fcf5ec;
 }
-.block:nth-child(2) {
-    /*background-image: linear-gradient(to bottom, #d5d5d5, transparent);*/
-}
-.block:nth-child(3) {
-}
 
-
-
-
-
+/*dialogs*/
 .charTxt, .backgroundTxt {
     position: relative;
     margin: 1rem;
@@ -294,14 +242,11 @@ body {
     height: fit-content;
     min-height: 3rem;
     min-width: 3rem;
-    /*max-width: 75%;*/
 }
 .charTxt p {
     min-height: 1.5rem;
 }
 .charTxt {
-    /*background-image: linear-gradient(to right, #fcf5eb, rgba(252, 244, 233, 0.6));*/
-    /*backdrop-filter: blur(10px);*/
     background-color: #fcf5eb;
 }
 .backgroundTxt {
@@ -320,7 +265,7 @@ body {
     border-width: 0 40px 40px 0;
     border-color: transparent #fcf5eb transparent transparent;
 }
-
+/*right blocks*/
 .blockRight .charTxt {
     background-image: linear-gradient(to left, #fcf5eb, rgba(252, 244, 233, 0.5));
 }
@@ -337,7 +282,6 @@ body {
     display: flex;
     flex-direction: column;
     color: #fff;
-    /*opacity: 0;*/
 }
 .charName {
     font-size: 1.5rem;
@@ -350,25 +294,16 @@ body {
     width: 10rem;
     border-radius: 50%;
     padding: 5px;
-    /*left: -100%;*/
-    /*opacity: 0;*/
 }
 .charImgRight {
     transform: scaleX(-1);
 }
-
 .charTxt, .backgroundTxt {
     justify-content: center;
     padding: 0 1rem;
     font-size: 1.5rem;
     line-height: 1.5rem;
 }
-.charTxt p {
-}
-
-
-
-
 .backgroundBlock {
     border-radius: 50px;
     margin: auto;
@@ -387,23 +322,13 @@ body {
 }
 
 /* individual characters */
-.pearson .charTxt {
-    /* box-shadow: 5px 5px 15px 5px #a19d98; */
-}
 .pearson img {
     background-color: #a19d97;
-}
-.anna .charTxt {
-    /* box-shadow: 5px 5px 15px 5px #ff9f7c; */
 }
 .anna img {
     background-color: #ff9f7c;
 }
-.sofia .charTxt {
-    /* box-shadow: -5px 5px 15px 5px #a52a2a; */
-}
 .sofia img {
-    /* border: 5px solid grey; */
     background-color: #a52a2a;
 }
 .limei img {
@@ -425,27 +350,6 @@ body {
     background-color: #1e4b1c;
 }
 
-/*#s1p1 {*/
-/*    !* background-color: #c1beba; *!*/
-/*    background-image: linear-gradient(250deg, #ffddac 50%, rgba(161, 157, 151, 0.5) 50%);*/
-/*}*/
-/*#s1p3, #s1p5, #s1p10, #s1p12, #s1p14, #s1p16, #s1p18 {*/
-/*    background-image: linear-gradient(290deg, rgba(166, 43, 43, 0.5) 50%, rgba(255, 159, 124, 0.5) 50%);*/
-/*}*/
-/*#s1p4, #s1p6, #s1p9, #s1p11, #s1p13, #s1p15, #s1p17 {*/
-/*    background-image: linear-gradient(250deg, rgba(165, 42, 42, 0.5) 50%, rgba(255, 159, 124, 0.5) 50%);*/
-/*}*/
-/*#s1p7, #s1p8 {*/
-/*    background-color: rgba(165, 42, 42, 0.5);*/
-/*}*/
-
-#txt6 span:nth-child(n+2):nth-child(-n+61) {
-    font-style: italic;
-}
-#txt6 span:nth-child(62):after {
-    content:"\a";
-    white-space: pre;
-}
 /* homepage */
 footer {
 }
